--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,6 @@ npm-debug.*
 *.orig.*
 web-build/
 
-# macOS
-.DS_Store
-
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
@@ -22,10 +19,14 @@ web-build/
 .pnp.js
 
 # testing
+coverage
 /coverage
 
 # production
 /build
+dist
+/dist
+.jest
 
 # misc
 .DS_Store
@@ -34,6 +35,15 @@ web-build/
 .env.test.local
 .env.production.local
 
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ide
+.idea
+.idea/
+.vscode
+.vscode/
